パスワードリセットメール送信APIの追加

--- a/Diary-Sample/appsettings.Development.json
+++ b/Diary-Sample/appsettings.Development.json
@@ -15,5 +15,6 @@
     "JwtIssuer": "1-system-group-issuer",
     "JwtAudience": "1-system-group-audience",
     "JwtExpireDays": 14
-  }
+  },
+  "ClientBaseUrl": "https://localhost:3000/"
 }
