--- a/Diary-Sample/appsettings.Development.json
+++ b/Diary-Sample/appsettings.Development.json
@@ -16,5 +16,5 @@
     "JwtAudience": "1-system-group-audience",
     "JwtExpireDays": 14
   },
-  "ClientBaseUrl": "https://localhost:3000/"
+  "ClientBaseUrl": "http://localhost:3000"
 }
