--- a/Diary-Sample/appsettings.Production.json
+++ b/Diary-Sample/appsettings.Production.json
@@ -15,5 +15,6 @@
     "JwtIssuer": "1-system-group-issuer",
     "JwtAudience": "1-system-group-audience",
     "JwtExpireDays": 14
-  }
+  },
+  "ClientBaseUrl": "http://localhost:3000"
 }
